# auburn

./: .gitignore  README.md  justfile  pyproject.toml
auburn_core/: Cargo.toml
auburn_core/src/: errors.rs  extractors.rs  lib.rs  request.rs  response.rs  router.rs  server.rs
benchmarks/: README.md  __init__.py  health_latency.py
benchmarks/results/: 2026-07-07-health-baseline.md
examples/: __init__.py  health.py  users.py
python/auburn/: __init__.py  app.py  cli.py  routing.py  schemas.py
python/auburn_core/: __init__.py
tests/: test_app.py
