[package]
name = "auburn_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "auburn_core"
crate-type = ["cdylib"]

[dependencies]
axum = "0.7"
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
