[package]
name = "auburn_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "auburn_core"
crate-type = ["cdylib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
axum = "0.7"
pyo3 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
